# packing_defect

./: .codecov.yml  .gitattributes  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PLacyl_interactions.csv  README.md  combined_interactions.csv  interaction_summary.csv  interaction_summary_nm2.csv  pyproject - Copy.toml  pyproject.toml  readthedocs.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  api.html  flow.md  genindex.html  getting_started.html  index.html  make.bat  objects.inv  py-modindex.html  requirements.yaml  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/autosummary/: packing_defect.core.analyzers.base.html  packing_defect.core.analyzers.html  packing_defect.core.analyzers.packing.html  packing_defect.core.analyzers.radius.html  packing_defect.core.classification.html  packing_defect.core.cluster.html  packing_defect.core.grid.html  packing_defect.core.html  packing_defect.core.interactions.html  packing_defect.core.stats.html  packing_defect.core.topology.html  packing_defect.core.vis.html  packing_defect.core.visualization.html  packing_defect.core.writer.html  packing_defect.data.files.html  packing_defect.data.html  packing_defect.html  packing_defect.run_defect.html  (+4 more)
notebooks/: Interactions.ipynb  combined_interactions.csv  defect.ipynb  radius.ipynb  viewing.ipynb
packing_defect/: __init__.py  defect.py  run_defect.py  run_radius - Copy.py  run_radius.py  run_utils.py  utils.py
(+766 files in other folders)
