[build-system]
requires = [
  "setuptools>=64",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "packing_defect"
description = "membrane packing defect analysis"
license = {file = "LICENSE" }
authors = [
    {name = "R. Jay Braun", email = "jaybraunjr@gmail.com"},
]
maintainers = [
    {name = "R. Jay Braun", email = "jaybraunjr@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

[tool.setuptools.packages.find]
include = ["packing_defect"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
tag_regex = "v?(?P<version>[0-9]+(?:\.[0-9]+){0,2})"
